service/tests/schemas/snapshots/roles/update_role_validation_rejects_long_name@roles.snap
---
source: tests/schemas/roles.rs
assertion_line: 167
expression: result
---
Err(
    "Validation error: {\"name\":\"Name must be under 32 letters\"}",
)
